--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,8 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+
 *,
 ::before,
 ::after {
@@ -11,22 +16,7 @@ label {
   color: #656262;
 }
 
-html,
 body {
-  height: 100%;
-  width: 100%;
-}
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: linear-gradient(
-    90deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(143, 187, 204, 1) 35%,
-    rgba(0, 212, 255, 1) 100%
-  );
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -86,17 +76,11 @@ span a {
 }
 
 .home_page {
-  height: 100vh;
   width: 100vw;
   background: #000;
   color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   text-transform: uppercase;
   font-size: 3rem;
-  flex-direction: column;
-  gap: 1rem;
 }
 
 .home_page span {
@@ -127,4 +111,18 @@ span a {
     padding: 0.6rem 1rem;
     font-size: 1.5rem;
   }
+}
+
+.center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(143, 187, 204, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  ); 
 }
