--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,17 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+
+/* Custom styles for the slider dots */
+.slick-dots li button:before {
+  color: white; /* Change the dots color to white */
+}
+
+.slick-dots li.slick-active button:before {
+  color: white; /* Ensure the active dot is also white */
+}
 
 *,
 ::before,
